--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,8 +1,8 @@
 body{
-    font-family: 'outfit', sans-serif;
-    background-image: url('../imagens/planodefundo.jpg');
-    background-repeat: no-repeat  ;
-    background-size:cover;
+    font-family: 'Outfit', sans-serif;
+    background-image: url('../imagens/plano\ de\ fundo\ 2.jpg');
+    background-repeat: no-repeat;
+    background-size: auto;
     
 }
 
